--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 sourceSets {
@@ -17,5 +18,7 @@ sourceSets {
     }
 }
 dependencies {
+    compile 'eu.hansolo:Medusa:6.+'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
